--- a/nodejs-basic/nodejs-web-server/package.json
+++ b/nodejs-basic/nodejs-web-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "start2" : "node server2.js"
   },
   "keywords": [],
   "author": "",
